feat: add Offers table
